# sem6

./: README.md  am_calc.aia  asset-manifest.json  index.html  precache-manifest.b1e625aff879e9a984a399fb1fb69116.js  service-worker.js
aia_project/: README.md  config.py  main.py  requirements.txt
aia_project/app/: __init__.py  cron.py  local.db  log.py  mail.py  models.py  routes_tournament.py  routes_user.py  utils.py
aia_project/test/: __init__.py  test_models.py
aia_task1/: README.md  index.html  package-lock.json  package.json  webpack.config.js
aia_task2/: README.md  index.html  nani.js  nani.min.js
aia_task3/: 15_json.html  16_http.html  AJAX.html  AJAXEvents.html  AJAXSelectors.html  Style.html  guitars.json
aia_task4/: .prettierrc.js  README.md  package.json
aia_task4/public/: index.html
aia_task4/src/: App.css  App.js
aia_task5/: .gitignore  README.md  app.js  box.js  config.js  package.json
aia_task5/routes/: actions.js  index.js
aia_task6/: Program.cs  README.md  Startup.cs
aia_task6/Pages/: Default.cshtml  (+6 more)
am_task3/: README.md
am_weather/: settings.gradle
iwm_task1/: .gitignore  README.md  plot.py  radon.py  requirements.txt  showcase.ipynb
iwm_task2/: .gitignore  README.md  colab.py  requirements.txt
prownolegle_task1/: .gitignore  pi1.cc  pi2.cc  pi6.cc  pi7.cc
prownolegle_task2/: D1_seq.cpp  D2.cpp  FN_D.cc  FN_F.cc  S1.cpp  taskloop.cc
proz_pooldance/: .gitignore  Cargo.toml  rustfmt.toml
proz_pooldance/src/: bin.rs  lib.rs  network.rs  node.rs  resource.rs
prozproszone_task1/: hello_world.cc  pi3.cc  pi4.cc  pi5.cc
(+111 files in other folders)
